# xAiA-v5

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindAsio.cmake  FindFmt.cmake  FindJSON.cmake  FindSpdlog.cmake  FindWebsocketpp.cmake
lib/dapi/: dapi.hpp
lib/dcache/: dcache.hpp  dobjects.hpp  dtypes.hpp
lib/dcache/dobjects/: channel_base.hpp  channel_category.hpp  channel_dm.hpp  channel_groupdm.hpp  channel_overwrites.hpp  channel_text.hpp  channel_thread.hpp  channel_voice.hpp  emoji.hpp  guild.hpp  member.hpp  role.hpp  user.hpp
lib/dcache/dtypes/: channel.hpp  gateway.hpp  permissions.hpp
lib/dgateway/: dcache.hpp  dgateway.hpp  dobjects.hpp  dtypes.hpp
lib/util/: str2num.hpp
src/: CMakeLists.txt  main.cpp
src/dapi/: CMakeLists.txt  dapi.cpp
src/dcache/: CMakeLists.txt
src/dcache/dobjects/: emoji.cpp  guild.cpp  member.cpp  role.cpp  user.cpp
src/dgateway/: CMakeLists.txt  dcache.cpp  dgateway.cpp
